# VEXpression

./: .gitignore  CMakeLists.txt  How To Build.md  LICENSE  README.md
grammar/: ExprLexer.g4  ExprParser.g4
src/: main.cpp
src/Ast/: AddAssignNode.h  AddNode.h  ArrayAccessExNode.h  ArrayAccessNode.h  ArrayAssignNode.h  ArrayExAssignNode.h  AssignNode.h  AstArena.h  AstNode.h  BitAndAssignNode.h  BitAndNode.h  BitNotNode.h  BitOrAssignNode.h  BitOrNode.h  BitXorAssignNode.h  BitXorNode.h  BreakNode.h  CastNode.h  ConstantNode.h  ConstructPrimitiveNode.h  ConstructSimdNode.h  ContinueNode.h  DivAssignNode.h  DivNode.h  DoWhileNode.h  EqNode.h  FlatVectorNode.h  ForNode.h  ForRangeNode.h  FunctionCallNode.h  GeNode.h  GtNode.h  IfNode.h  LeNode.h  LogAndNode.h  LogNotNode.h  LogOrNode.h  LtNode.h  MapNode.h  MethodCallNode.h  (+28 more)
src/Compiler/: AstBuilderVisitor.h
src/Engine/: BFloat16.h  Errors.h  ExecutionContext.cpp  ExecutionContext.h  Float16.h  FunctionDef.h  HtmlIntrinsics.h  IntrinsicBridges.h  Map.cpp  Map.h  Object.h  Result.h  SimdBridgeTable.inc  SimdBridgeTable.inl  SimdIncludes.h  SimdObject.cpp  SimdObject.h  String.cpp  String.h  Vector.cpp  Vector.h
src/Foundation/: Case.cpp  Case.h  CaseFold.cpp  CaseFold.h  Character.cpp  Character.h  Encode.cpp  Encode.h  EncodeEnum.inl  Html.cpp  Html.h  LargeMath.h  Math.h  SinCos.asm  SinCos.h  System.h  Text.cpp  Text.h  TextPolicy.h  Unicode.cpp  Unicode.h  UnicodeData.inl
src/OS/: OS.h
src/SIMDeX/mips/: asub.h  ave.h  aver.h  bclr.h  bclri.h  binsl.h  binsli.h  binsr.h  binsri.h  bmnz_v.h  bmnzi.h  bmz_v.h  bmzi.h  bneg.h  bnegi.h  bsel_v.h  bseli.h  bset.h  bseti.h  cast_to_scalar_double.h  cast_to_scalar_float.h  cast_to_vector_double.h  cast_to_vector_float.h  ceq.h  ceqi.h  cfcmsa.h  cle.h  clei.h  clt.h  clti.h  copy.h  div.h  dotp.h  dpadd.h  dpsub.h  fadd.h  fcaf.h  fceq.h  fclass.h  fcle.h  (+105 more)
src/Strings/: SimdDescriptions.inl  StringEnum.inl  Strings.h
src/UI/: MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h
tools/: Mips Clang 22.1.0.txt  Mips64 Clang 22.1.0.txt  audit_casefold.py  audit_lower.py  audit_upper.py  encode.py  encoding_mappings.GodBolt.cpp  encoding_mappings.py  generate_bridges.py  generate_unicode.py  generate_unicode_all.py  isalpha_check.py  isdecimal_check.py  isdigit_check.py  islower_check.py  isnumeric_check.py  isprintable_check.py  isspace_check.py  isupper_check (2).py  isupper_check.py  list_encodings.py
